# autoforge

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: SPRITESHEET_TEMPLATE.md
src/: atlas.rs  batcher.rs  belt.rs  buildcost.rs  building.rs  camera.rs  combat.rs  constants.rs  cutscene.rs  daynight.rs  enemy.rs  fluid.rs  game.rs  grid.rs  inserter.rs  item.rs  machine.rs  main.rs  mapgen.rs  milestones.rs  pollution.rs  power.rs  recipe.rs  render.rs  research.rs  save.rs  sound.rs  splitter.rs  sprites.rs  story.rs  train.rs  types.rs
