[package]
name = "autoforge"
version = "0.1.0"
edition = "2021"
description = "A 2D top-down factory automation game — mine, smelt, assemble, research, and defend."
license = "MIT"
authors = ["arekkusul"]

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
rayon = "1.10"

# Optimize dependencies even in debug builds (macroquad recommendation)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
